[package]
name = "deko_os"
version = "0.1.0"
authors = ["dekokun <dekokun@hatena.ne.jp>"]

[profile.dev]

[profile.release]

[dependencies]
bootloader_precompiled = "0.2.0"
volatile = "0.2.4"
spin = "0.4.8"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
default-target = "x86_64-deko_os.json"
